silver bot on 1.14 over 10 looks good day 1

--- a/_SilverBots/RunSilverBot_1.72_over90Days_NoTrain.ipynb
+++ b/_SilverBots/RunSilverBot_1.72_over90Days_NoTrain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\pyfolio\\pos.py:26: UserWarning: Module \"zipline.assets\" not found; multipliers will not be applied to position notionals.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -56,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1149,7 @@
        "39"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1169,7 @@
        "4"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,31 +1180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| load actor from: ./bots/1.14_over10days_Mar28thSilver.pth\n"
+      "| load actor from: ./bots/1.72_over90days_Mar1_testing.pth\n",
+      "Waiting for market to open...\n",
+      "Market opened.\n"
      ]
     },
     {
      "ename": "ValueError",
-     "evalue": "Fail to load agent!",
+     "evalue": "'AGNC' is not in list",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 19\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.__init__\u001b[1;34m(self, ticker_list, time_interval, drl_lib, agent, cwd, net_dim, state_dim, action_dim, API_KEY, API_SECRET, API_BASE_URL, tech_indicator_list, turbulence_thresh, max_stock, latency)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m| load actor from: \u001b[39m\u001b[39m{\u001b[39;00mcwd\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 19\u001b[0m actor\u001b[39m.\u001b[39;49mload_state_dict(torch\u001b[39m.\u001b[39;49mload(cwd, map_location\u001b[39m=\u001b[39;49m\u001b[39mlambda\u001b[39;49;00m storage, loc: storage))\n\u001b[0;32m     20\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mact \u001b[39m=\u001b[39m actor\n",
-      "File \u001b[1;32mc:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\torch\\nn\\modules\\module.py:1671\u001b[0m, in \u001b[0;36mModule.load_state_dict\u001b[1;34m(self, state_dict, strict)\u001b[0m\n\u001b[0;32m   1670\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(error_msgs) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m-> 1671\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mError(s) in loading state_dict for \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[0;32m   1672\u001b[0m                        \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(error_msgs)))\n\u001b[0;32m   1673\u001b[0m \u001b[39mreturn\u001b[39;00m _IncompatibleKeys(missing_keys, unexpected_keys)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for ActorPPO:\n\tUnexpected key(s) in state_dict: \"net.12.weight\", \"net.12.bias\". \n\tsize mismatch for action_std_log: copying a param with shape torch.Size([1, 11]) from checkpoint, the shape in current model is torch.Size([1, 4]).\n\tsize mismatch for net.0.weight: copying a param with shape torch.Size([128, 102]) from checkpoint, the shape in current model is torch.Size([128, 39]).",
-      "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Run bot\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#5 TODO Change the bot name and time interval used in training are set\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m paper_trading_erl \u001b[39m=\u001b[39m AlpacaPaperTrading(ticker_list \u001b[39m=\u001b[39;49m ticker_list, \n\u001b[0;32m      4\u001b[0m                                        time_interval \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m1H\u001b[39;49m\u001b[39m'\u001b[39;49m, \n\u001b[0;32m      5\u001b[0m                                        drl_lib \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39melegantrl\u001b[39;49m\u001b[39m'\u001b[39;49m, \n\u001b[0;32m      6\u001b[0m                                        agent \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mppo\u001b[39;49m\u001b[39m'\u001b[39;49m, \n\u001b[0;32m      7\u001b[0m                                        cwd \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m./bots\u001b[39;49m\u001b[39m'\u001b[39;49m, \n\u001b[0;32m      8\u001b[0m                                        net_dim \u001b[39m=\u001b[39;49m ERL_PARAMS[\u001b[39m'\u001b[39;49m\u001b[39mnet_dimension\u001b[39;49m\u001b[39m'\u001b[39;49m], \n\u001b[0;32m      9\u001b[0m                                        state_dim \u001b[39m=\u001b[39;49m state_dim, \n\u001b[0;32m     10\u001b[0m                                        action_dim\u001b[39m=\u001b[39;49m action_dim, \n\u001b[0;32m     11\u001b[0m                                        API_KEY \u001b[39m=\u001b[39;49m API_KEY, \n\u001b[0;32m     12\u001b[0m                                        API_SECRET \u001b[39m=\u001b[39;49m API_SECRET, \n\u001b[0;32m     13\u001b[0m                                        API_BASE_URL \u001b[39m=\u001b[39;49m API_BASE_URL, \n\u001b[0;32m     14\u001b[0m                                        tech_indicator_list \u001b[39m=\u001b[39;49m customIndicators, \n\u001b[0;32m     15\u001b[0m                                        turbulence_thresh\u001b[39m=\u001b[39;49m\u001b[39m30\u001b[39;49m, \n\u001b[0;32m     16\u001b[0m                                        max_stock\u001b[39m=\u001b[39;49m\u001b[39m100\u001b[39;49m)  \u001b[39m# this is the max that can be placed at one time, not the max the bot will buy if capital is available\u001b[39;00m\n\u001b[0;32m     18\u001b[0m paper_trading_erl\u001b[39m.\u001b[39mrun()\n",
-      "Cell \u001b[1;32mIn[22], line 23\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.__init__\u001b[1;34m(self, ticker_list, time_interval, drl_lib, agent, cwd, net_dim, state_dim, action_dim, API_KEY, API_SECRET, API_BASE_URL, tech_indicator_list, turbulence_thresh, max_stock, latency)\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdevice \u001b[39m=\u001b[39m agent\u001b[39m.\u001b[39mdevice\n\u001b[0;32m     22\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mBaseException\u001b[39;00m:\n\u001b[1;32m---> 23\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mFail to load agent!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     25\u001b[0m \u001b[39melif\u001b[39;00m drl_lib \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mrllib\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     26\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mray\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mrllib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39magents\u001b[39;00m \u001b[39mimport\u001b[39;00m ppo\n",
-      "\u001b[1;31mValueError\u001b[0m: Fail to load agent!"
+      "Cell \u001b[1;32mIn[50], line 18\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Run bot\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#5 TODO Change the bot name and time interval used in training are set\u001b[39;00m\n\u001b[0;32m      3\u001b[0m paper_trading_erl \u001b[39m=\u001b[39m AlpacaPaperTrading(ticker_list \u001b[39m=\u001b[39m ticker_list, \n\u001b[0;32m      4\u001b[0m                                        time_interval \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m1H\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[0;32m      5\u001b[0m                                        drl_lib \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39melegantrl\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m                                        turbulence_thresh\u001b[39m=\u001b[39m\u001b[39m30\u001b[39m, \n\u001b[0;32m     16\u001b[0m                                        max_stock\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m)  \u001b[39m# this is the max that can be placed at one time, not the max the bot will buy if capital is available\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m paper_trading_erl\u001b[39m.\u001b[39;49mrun()\n",
+      "Cell \u001b[1;32mIn[47], line 159\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.run\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    156\u001b[0m   time\u001b[39m.\u001b[39msleep(\u001b[39m60\u001b[39m \u001b[39m*\u001b[39m \u001b[39m15\u001b[39m)\n\u001b[0;32m    158\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 159\u001b[0m   \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtrade()\n\u001b[0;32m    160\u001b[0m   last_equity \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39malpaca\u001b[39m.\u001b[39mget_account()\u001b[39m.\u001b[39mlast_equity)\n\u001b[0;32m    161\u001b[0m   cur_time \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n",
+      "Cell \u001b[1;32mIn[47], line 177\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.trade\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    176\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtrade\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m--> 177\u001b[0m     state \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_state()\n\u001b[0;32m    179\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdrl_lib \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39melegantrl\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m    180\u001b[0m         \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n",
+      "Cell \u001b[1;32mIn[47], line 266\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.get_state\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    264\u001b[0m stocks \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstockUniverse)\n\u001b[0;32m    265\u001b[0m \u001b[39mfor\u001b[39;00m position \u001b[39min\u001b[39;00m positions:\n\u001b[1;32m--> 266\u001b[0m     ind \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstockUniverse\u001b[39m.\u001b[39;49mindex(position\u001b[39m.\u001b[39;49msymbol)\n\u001b[0;32m    267\u001b[0m     stocks[ind] \u001b[39m=\u001b[39m ( \u001b[39mabs\u001b[39m(\u001b[39mint\u001b[39m(\u001b[39mfloat\u001b[39m(position\u001b[39m.\u001b[39mqty))))\n\u001b[0;32m    269\u001b[0m stocks \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(stocks, dtype \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: 'AGNC' is not in list"
      ]
     }
    ],
