--- a/_SilverBots/RunSilverBot_1.14_over10Days_NoTrain.ipynb
+++ b/_SilverBots/RunSilverBot_1.14_over10Days_NoTrain.ipynb
@@ -1221,6 +1221,28 @@
       "Market order of | 37 APLE buy | completed.\n",
       "Market order of | 26 XRX buy | completed.\n",
       "Market order of | 33 AGNC buy | completed.\n",
+      "Market order of | 24 BB buy | completed.\n",
+      "11\n",
+      "Quantity is 0, order of | 0 DBX sell | not completed.\n",
+      "Quantity is 0, order of | 0 EC sell | not completed.\n",
+      "Quantity is 0, order of | 0 RIG sell | not completed.\n",
+      "Quantity is 0, order of | 0 GME sell | not completed.\n",
+      "Market order of | 17 SBGI buy | completed.\n",
+      "Market order of | 12 TGNA buy | completed.\n",
+      "Market order of | 36 APLE buy | completed.\n",
+      "Market order of | 26 XRX buy | completed.\n",
+      "Market order of | 33 AGNC buy | completed.\n",
+      "Market order of | 24 BB buy | completed.\n",
+      "11\n",
+      "Quantity is 0, order of | 0 DBX sell | not completed.\n",
+      "Quantity is 0, order of | 0 EC sell | not completed.\n",
+      "Quantity is 0, order of | 0 RIG sell | not completed.\n",
+      "Quantity is 0, order of | 0 GME sell | not completed.\n",
+      "Market order of | 17 SBGI buy | completed.\n",
+      "Market order of | 11 TGNA buy | completed.\n",
+      "Market order of | 36 APLE buy | completed.\n",
+      "Market order of | 26 XRX buy | completed.\n",
+      "Market order of | 33 AGNC buy | completed.\n",
       "Market order of | 24 BB buy | completed.\n"
      ]
     }
