--- a/_Goldbots/RunGoldBot_TEMPLATE.ipynb
+++ b/_Goldbots/RunGoldBot_TEMPLATE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\pyfolio\\pos.py:26: UserWarning: Module \"zipline.assets\" not found; multipliers will not be applied to position notionals.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1158,7 @@
        "39"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1178,7 @@
        "4"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1189,21 +1198,7 @@
      "text": [
       "| load actor from: ./bots/1.72_over90days_Mar12023.pth\n",
       "Waiting for market to open...\n",
-      "Market opened.\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "'BB' is not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[141], line 18\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Run bot\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#5 TODO Change the bot name and time interval used in training are set\u001b[39;00m\n\u001b[0;32m      3\u001b[0m paper_trading_erl \u001b[39m=\u001b[39m AlpacaPaperTrading(ticker_list \u001b[39m=\u001b[39m ticker_list, \n\u001b[0;32m      4\u001b[0m                                        time_interval \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m1H\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[0;32m      5\u001b[0m                                        drl_lib \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39melegantrl\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m                                        turbulence_thresh\u001b[39m=\u001b[39m\u001b[39m30\u001b[39m, \n\u001b[0;32m     16\u001b[0m                                        max_stock\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m)  \u001b[39m# this is the max that can be placed at one time, not the max the bot will buy if capital is available\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m paper_trading_erl\u001b[39m.\u001b[39;49mrun()\n",
-      "Cell \u001b[1;32mIn[138], line 159\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.run\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    156\u001b[0m   time\u001b[39m.\u001b[39msleep(\u001b[39m60\u001b[39m \u001b[39m*\u001b[39m \u001b[39m15\u001b[39m)\n\u001b[0;32m    158\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 159\u001b[0m   \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtrade()\n\u001b[0;32m    160\u001b[0m   last_equity \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39malpaca\u001b[39m.\u001b[39mget_account()\u001b[39m.\u001b[39mlast_equity)\n\u001b[0;32m    161\u001b[0m   cur_time \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n",
-      "Cell \u001b[1;32mIn[138], line 177\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.trade\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    176\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtrade\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m--> 177\u001b[0m     state \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_state()\n\u001b[0;32m    179\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdrl_lib \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39melegantrl\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m    180\u001b[0m         \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n",
-      "Cell \u001b[1;32mIn[138], line 266\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.get_state\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    264\u001b[0m stocks \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstockUniverse)\n\u001b[0;32m    265\u001b[0m \u001b[39mfor\u001b[39;00m position \u001b[39min\u001b[39;00m positions:\n\u001b[1;32m--> 266\u001b[0m     ind \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstockUniverse\u001b[39m.\u001b[39;49mindex(position\u001b[39m.\u001b[39;49msymbol)\n\u001b[0;32m    267\u001b[0m     stocks[ind] \u001b[39m=\u001b[39m ( \u001b[39mabs\u001b[39m(\u001b[39mint\u001b[39m(\u001b[39mfloat\u001b[39m(position\u001b[39m.\u001b[39mqty))))\n\u001b[0;32m    269\u001b[0m stocks \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(stocks, dtype \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: 'BB' is not in list"
+      "974 minutes til market open.\n"
      ]
     }
    ],
