Moved Bronze Training Folder

--- a/_Goldbots/RunGoldBot_TEMPLATE.ipynb
+++ b/_Goldbots/RunGoldBot_TEMPLATE.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "#Ticker List\n",
-    "ticker_list = ['RIG','APLE','XRX','AGNC'] "
+    "ticker_list = ['DBX','EC','VFC','SBGI','TGNA','APLE','XRX','RIG','AGNC','GME','BB']  "
    ]
   },
   {
