--- a/_SilverBots/RunSilverBot_1.72_over90Days_NoTrain.ipynb
+++ b/_SilverBots/RunSilverBot_1.72_over90Days_NoTrain.ipynb
@@ -1208,8 +1208,9 @@
     }
    ],
    "source": [
-    "#Run bot\n",
+    "#Run bot  #\n",
     "#5 TODO Change the bot name and time interval used in training are set\n",
+    "# Need to train with more realistic max_stock parameter\n",
     "paper_trading_erl = AlpacaPaperTrading(ticker_list = ticker_list, \n",
     "                                       time_interval = '1H', \n",
     "                                       drl_lib = 'elegantrl', \n",
