--- a/_SilverBots/RunSilverBot_1.14_over10Days_NoTrain.ipynb
+++ b/_SilverBots/RunSilverBot_1.14_over10Days_NoTrain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\pyfolio\\pos.py:26: UserWarning: Module \"zipline.assets\" not found; multipliers will not be applied to position notionals.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,9 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alpaca successfully connected\n"
+     ]
+    }
+   ],
    "source": [
     "DP = DataProcessor(data_source = 'alpaca',\n",
     "                  API_KEY = API_KEY, \n",
@@ -128,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1158,7 @@
        "102"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1178,7 @@
        "11"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1185,65 +1202,47 @@
       "11\n",
       "Quantity is 0, order of | 0 DBX sell | not completed.\n",
       "Quantity is 0, order of | 0 RIG sell | not completed.\n",
-      "Quantity is 0, order of | 0 GME sell | not completed.\n",
-      "Market order of | 16 SBGI buy | completed.\n",
-      "Market order of | 13 TGNA buy | completed.\n",
-      "Market order of | 37 APLE buy | completed.\n",
+      "Quantity is 0, order of | 0 GME sell | not completed.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_7708\\1825690193.py:181: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
+      "  s_tensor = torch.as_tensor((state,), device=self.device)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Market order of | 15 SBGI buy | completed.\n",
+      "Market order of | 14 TGNA buy | completed.\n",
+      "Market order of | 38 APLE buy | completed.\n",
       "Market order of | 26 XRX buy | completed.\n",
       "Market order of | 34 AGNC buy | completed.\n",
-      "Market order of | 24 BB buy | completed.\n",
+      "Market order of | 23 BB buy | completed.\n",
       "11\n",
       "Quantity is 0, order of | 0 DBX sell | not completed.\n",
       "Quantity is 0, order of | 0 RIG sell | not completed.\n",
       "Quantity is 0, order of | 0 GME sell | not completed.\n",
-      "Market order of | 16 SBGI buy | completed.\n",
-      "Market order of | 13 TGNA buy | completed.\n",
-      "Market order of | 37 APLE buy | completed.\n",
+      "Market order of | 15 SBGI buy | completed.\n",
+      "Market order of | 14 TGNA buy | completed.\n",
+      "Market order of | 38 APLE buy | completed.\n",
       "Market order of | 26 XRX buy | completed.\n",
-      "Market order of | 33 AGNC buy | completed.\n",
-      "Market order of | 24 BB buy | completed.\n",
+      "Market order of | 34 AGNC buy | completed.\n",
+      "Market order of | 23 BB buy | completed.\n",
       "11\n",
       "Quantity is 0, order of | 0 DBX sell | not completed.\n",
       "Quantity is 0, order of | 0 RIG sell | not completed.\n",
       "Quantity is 0, order of | 0 GME sell | not completed.\n",
-      "Market order of | 16 SBGI buy | completed.\n",
-      "Market order of | 12 TGNA buy | completed.\n",
-      "Market order of | 37 APLE buy | completed.\n",
+      "Market order of | 15 SBGI buy | completed.\n",
+      "Market order of | 14 TGNA buy | completed.\n",
+      "Market order of | 38 APLE buy | completed.\n",
       "Market order of | 26 XRX buy | completed.\n",
-      "Market order of | 33 AGNC buy | completed.\n",
-      "Market order of | 24 BB buy | completed.\n",
-      "11\n",
-      "Quantity is 0, order of | 0 DBX sell | not completed.\n",
-      "Quantity is 0, order of | 0 RIG sell | not completed.\n",
-      "Quantity is 0, order of | 0 GME sell | not completed.\n",
-      "Market order of | 17 SBGI buy | completed.\n",
-      "Market order of | 12 TGNA buy | completed.\n",
-      "Market order of | 37 APLE buy | completed.\n",
-      "Market order of | 26 XRX buy | completed.\n",
-      "Market order of | 33 AGNC buy | completed.\n",
-      "Market order of | 24 BB buy | completed.\n",
-      "11\n",
-      "Quantity is 0, order of | 0 DBX sell | not completed.\n",
-      "Quantity is 0, order of | 0 EC sell | not completed.\n",
-      "Quantity is 0, order of | 0 RIG sell | not completed.\n",
-      "Quantity is 0, order of | 0 GME sell | not completed.\n",
-      "Market order of | 17 SBGI buy | completed.\n",
-      "Market order of | 12 TGNA buy | completed.\n",
-      "Market order of | 36 APLE buy | completed.\n",
-      "Market order of | 26 XRX buy | completed.\n",
-      "Market order of | 33 AGNC buy | completed.\n",
-      "Market order of | 24 BB buy | completed.\n",
-      "11\n",
-      "Quantity is 0, order of | 0 DBX sell | not completed.\n",
-      "Quantity is 0, order of | 0 EC sell | not completed.\n",
-      "Quantity is 0, order of | 0 RIG sell | not completed.\n",
-      "Quantity is 0, order of | 0 GME sell | not completed.\n",
-      "Market order of | 17 SBGI buy | completed.\n",
-      "Market order of | 11 TGNA buy | completed.\n",
-      "Market order of | 36 APLE buy | completed.\n",
-      "Market order of | 26 XRX buy | completed.\n",
-      "Market order of | 33 AGNC buy | completed.\n",
-      "Market order of | 24 BB buy | completed.\n"
+      "Market order of | 34 AGNC buy | completed.\n",
+      "Market order of | 23 BB buy | completed.\n"
      ]
     }
    ],
