New Gold bot ready for live

--- a/_Goldbots/RunGoldBot_TEMPLATE.ipynb
+++ b/_Goldbots/RunGoldBot_TEMPLATE.ipynb
@@ -582,7 +582,7 @@
     "\n",
     "        evaluator.evaluate_and_save(agent.act, args.horizon_len, logging_tuple)\n",
     "        if (evaluator.total_step > args.break_step) or os.path.exists(f\"{args.cwd}/stop\"):\n",
-    "            torch.save(agent.act.state_dict(), args.cwd + '/1.72_over90days_Mar1_testing.pth')\n",
+    "            torch.save(agent.act.state_dict(), args.cwd + '/1.14_over10days_Mar28th.pth')\n",
     "            break  # stop training when reach `break_step` or `mkdir cwd/stop`\n",
     "\n",
     "\n",
@@ -698,7 +698,7 @@
     "        # load agent\n",
     "        try:  \n",
     "            #TO do 2: change the file\n",
-    "            cwd = cwd + '/1.72_over90days_Mar12023.pth'\n",
+    "            cwd = cwd + '/1.14_over10days_Mar28th.pth'\n",
     "            print(f\"| load actor from: {cwd}\")\n",
     "            actor.load_state_dict(torch.load(cwd, map_location=lambda storage, loc: storage))\n",
     "            act = actor\n",
@@ -739,15 +739,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Make sure the gammas are the same in all 3 places\n",
     "\n",
-    "#TODO  make sure the parameters used in training are used here!\n",
-    "ERL_PARAMS = {\"learning_rate\": 0.033,\"batch_size\": 2048,\"gamma\":  0.93,\n",
-    "        \"seed\":312,\"net_dimension\":[128,64,32,16,8], \"target_step\":30000, \"eval_gap\":30,\n",
+    "# #TODO  make sure the parameters used in training are used here!\n",
+    "ERL_PARAMS = {\"learning_rate\": 0.005,\"batch_size\": 2048,\"gamma\":  0.85,  # need to adjust this in config as well during tuning\n",
+    "        \"seed\":312,\"net_dimension\":[128,64,32,16,8,4], \"target_step\":10000, \"eval_gap\":30,\n",
     "        \"eval_times\":1} \n",
     "env = StockTradingEnv\n",
     "\n",
@@ -811,7 +811,7 @@
    "source": [
     "\n",
     "\n",
-    "class AlpacaPaperTrading():\n",
+    "class AlpacaPaperTrading(): #This is LIVE!!! Even though the class is named paper\n",
     "\n",
     "    def __init__(self,ticker_list, time_interval, drl_lib, agent, cwd, net_dim, \n",
     "                 state_dim, action_dim, API_KEY, API_SECRET, \n",
@@ -827,7 +827,7 @@
     "                # load agent\n",
     "                try:  \n",
     "                    #TODO 3: Change the name\n",
-    "                    cwd = cwd + '/1.72_over90days_Mar12023.pth'\n",
+    "                    cwd = cwd + '/1.14_over10days_Mar28th.pth'\n",
     "                    print(f\"| load actor from: {cwd}\")\n",
     "                    actor.load_state_dict(torch.load(cwd, map_location=lambda storage, loc: storage))\n",
     "                    self.act = actor\n",
@@ -1155,7 +1155,7 @@
     {
      "data": {
       "text/plain": [
-       "39"
+       "102"
       ]
      },
      "execution_count": 23,
@@ -1175,7 +1175,7 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "11"
       ]
      },
      "execution_count": 24,
@@ -1193,12 +1193,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "| load actor from: ./bots/1.72_over90days_Mar12023.pth\n",
-      "Waiting for market to open...\n",
-      "974 minutes til market open.\n"
+     "ename": "NameError",
+     "evalue": "name 'ERL_PARAMS' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 8\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Run bot\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#5 TODO Change the bot name and time interval used in training are set\u001b[39;00m\n\u001b[0;32m      3\u001b[0m paper_trading_erl \u001b[39m=\u001b[39m AlpacaPaperTrading(ticker_list \u001b[39m=\u001b[39m ticker_list, \n\u001b[0;32m      4\u001b[0m                                        time_interval \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m1H\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[0;32m      5\u001b[0m                                        drl_lib \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39melegantrl\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[0;32m      6\u001b[0m                                        agent \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mppo\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[0;32m      7\u001b[0m                                        cwd \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m./bots\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[1;32m----> 8\u001b[0m                                        net_dim \u001b[39m=\u001b[39m ERL_PARAMS[\u001b[39m'\u001b[39m\u001b[39mnet_dimension\u001b[39m\u001b[39m'\u001b[39m], \n\u001b[0;32m      9\u001b[0m                                        state_dim \u001b[39m=\u001b[39m state_dim, \n\u001b[0;32m     10\u001b[0m                                        action_dim\u001b[39m=\u001b[39m action_dim, \n\u001b[0;32m     11\u001b[0m                                        API_KEY \u001b[39m=\u001b[39m API_KEY, \n\u001b[0;32m     12\u001b[0m                                        API_SECRET \u001b[39m=\u001b[39m API_SECRET, \n\u001b[0;32m     13\u001b[0m                                        API_BASE_URL \u001b[39m=\u001b[39m API_BASE_URL, \n\u001b[0;32m     14\u001b[0m                                        tech_indicator_list \u001b[39m=\u001b[39m customIndicators, \n\u001b[0;32m     15\u001b[0m                                        turbulence_thresh\u001b[39m=\u001b[39m\u001b[39m30\u001b[39m, \n\u001b[0;32m     16\u001b[0m                                        max_stock\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m)  \u001b[39m# this is the max that can be placed at one time, not the max the bot will buy if capital is available\u001b[39;00m\n\u001b[0;32m     18\u001b[0m paper_trading_erl\u001b[39m.\u001b[39mrun()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ERL_PARAMS' is not defined"
      ]
     }
    ],
