--- a/_Goldbots/RunGoldBot_TEMPLATE.ipynb
+++ b/_Goldbots/RunGoldBot_TEMPLATE.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = \"PK17F7RELAQZCQDXZDRR\"\n",
-    "API_SECRET = \"eX4KGWMaBHRs6i5rDljhrtNxZHkLzbm3n97LxRdL\"\n",
-    "API_BASE_URL = 'https://paper-api.alpaca.markets'\n",
+    "API_KEY = \"AKLIUFDIM8M82VU1P8MK\"\n",
+    "API_SECRET = \"VwlPbyuFpnecHHNZ5cnBjyBLh17cmfAP1qS8gpnR\"\n",
+    "API_BASE_URL = 'https://api.alpaca.markets'\n",
     "data_url = 'wss://data.alpaca.markets'"
    ]
   },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,48 +933,52 @@
     "        self.awaitMarketOpen()\n",
     "        print(\"Market opened.\")\n",
     "\n",
-    "        while True:\n",
-    "\n",
-    "          # Figure out when the market will close so we can prepare to sell beforehand.\n",
-    "          clock = self.alpaca.get_clock()\n",
-    "          closingTime = clock.next_close.replace(tzinfo=datetime.timezone.utc).timestamp()\n",
-    "          currTime = clock.timestamp.replace(tzinfo=datetime.timezone.utc).timestamp()\n",
-    "          self.timeToClose = closingTime - currTime\n",
+    "        #Uncommenting this will force all positions closed at end of day\n",
+    "        # while True:\n",
+    "#############################################################################################\n",
+    "        #   # Figure out when the market will close so we can prepare to sell beforehand.\n",
+    "        #   clock = self.alpaca.get_clock()\n",
+    "        #   closingTime = clock.next_close.replace(tzinfo=datetime.timezone.utc).timestamp()\n",
+    "        #   currTime = clock.timestamp.replace(tzinfo=datetime.timezone.utc).timestamp()\n",
+    "        #   self.timeToClose = closingTime - currTime\n",
     "    \n",
-    "          if(self.timeToClose < (600)):\n",
-    "            # Close all positions when 10 minutes til market close.\n",
-    "            # print(\"Market closing soon. Stop trading.\")\n",
-    "            # break  #comment both of these lines out for closing positions, don't use break just use thread.sleep()\n",
+    "        #   if(self.timeToClose < (600)):\n",
+    "        #     # Close all positions when 10 minutes til market close.\n",
+    "        #     # print(\"Market closing soon. Stop trading.\")\n",
+    "        #     # break  #comment both of these lines out for closing positions, don't use break just use thread.sleep()\n",
     "            \n",
-    "            # Close all positions when 10 minutes til market close.\n",
-    "            print(\"Market closing soon.  Closing positions.\")\n",
+    "        #     # Close all positions when 10 minutes til market close.\n",
+    "        #     print(\"Market closing soon.  Closing positions.\")\n",
     "\n",
-    "            threads = []\n",
-    "            positions = self.alpaca.list_positions()\n",
-    "            for position in positions:\n",
-    "              if(position.side == 'long'):\n",
-    "                orderSide = 'sell'\n",
-    "              else:\n",
-    "                orderSide = 'buy'\n",
-    "              qty = abs(int(float(position.qty)))\n",
-    "              respSO = []\n",
-    "              tSubmitOrder = threading.Thread(target=self.submitOrder(qty, position.symbol, orderSide, respSO))\n",
-    "              tSubmitOrder.start()\n",
-    "              threads.append(tSubmitOrder)    # record thread for joining later\n",
+    "        #     threads = []\n",
+    "        #     positions = self.alpaca.list_positions()\n",
+    "        #     for position in positions:\n",
+    "        #       if(position.side == 'long'):\n",
+    "        #         orderSide = 'sell'\n",
+    "        #       else:\n",
+    "        #         orderSide = 'buy'\n",
+    "        #       qty = abs(int(float(position.qty)))\n",
+    "        #       respSO = []\n",
+    "        #       tSubmitOrder = threading.Thread(target=self.submitOrder(qty, position.symbol, orderSide, respSO))\n",
+    "        #       tSubmitOrder.start()\n",
+    "        #       threads.append(tSubmitOrder)    # record thread for joining later\n",
     "\n",
-    "            for x in threads:   #  wait for all threads to complete\n",
-    "                x.join()     \n",
-    "            # Run script again after market close for next trading day.\n",
-    "            print(\"Sleeping until market close (15 minutes).\")\n",
-    "            time.sleep(60 * 15)\n",
+    "        #     for x in threads:   #  wait for all threads to complete\n",
+    "        #         x.join()     \n",
+    "        #     # Run script again after market close for next trading day.\n",
+    "        #     print(\"Sleeping until market close (15 minutes).\")\n",
+    "        #     time.sleep(60 * 15)\n",
     "            \n",
-    "          else:\n",
-    "            self.trade()\n",
-    "            last_equity = float(self.alpaca.get_account().last_equity)\n",
-    "            cur_time = time.time()\n",
-    "            self.equities.append([cur_time,last_equity])\n",
-    "            time.sleep(self.time_interval)\n",
-    "            \n",
+    "        #   else:\n",
+    "           ###############################################\n",
+    "        self.trade()\n",
+    "        last_equity = float(self.alpaca.get_account().last_equity)\n",
+    "        cur_time = time.time()\n",
+    "        self.equities.append([cur_time,last_equity])\n",
+    "        time.sleep(self.time_interval)\n",
+    "     \n",
+    "      #  print(\"Current Balance: \" +last_equity.tostring() + \" Time: \" + cur_time.tostring());\n",
+    "          \n",
     "    def awaitMarketOpen(self):\n",
     "        isOpen = self.alpaca.get_clock().is_open\n",
     "        while(not isOpen):\n",
@@ -1066,7 +1070,7 @@
     "    \n",
     "    def get_state(self):\n",
     "        alpaca = AlpacaProcessor(api=self.alpaca)\n",
-    "        price, tech, turbulence = alpaca.fetch_latest_data(ticker_list = self.stockUniverse, time_interval='1Min',\n",
+    "        price, tech, turbulence = alpaca.fetch_latest_data(ticker_list = self.stockUniverse, time_interval='1H',\n",
     "                                                     tech_indicator_list=self.tech_indicator_list)\n",
     "        turbulence_bool = 1 if turbulence >= self.turbulence_thresh else 0\n",
     "        \n",
@@ -1193,14 +1197,34 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ERL_PARAMS' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 8\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Run bot\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#5 TODO Change the bot name and time interval used in training are set\u001b[39;00m\n\u001b[0;32m      3\u001b[0m paper_trading_erl \u001b[39m=\u001b[39m AlpacaPaperTrading(ticker_list \u001b[39m=\u001b[39m ticker_list, \n\u001b[0;32m      4\u001b[0m                                        time_interval \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m1H\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[0;32m      5\u001b[0m                                        drl_lib \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39melegantrl\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[0;32m      6\u001b[0m                                        agent \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mppo\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[0;32m      7\u001b[0m                                        cwd \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m./bots\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[1;32m----> 8\u001b[0m                                        net_dim \u001b[39m=\u001b[39m ERL_PARAMS[\u001b[39m'\u001b[39m\u001b[39mnet_dimension\u001b[39m\u001b[39m'\u001b[39m], \n\u001b[0;32m      9\u001b[0m                                        state_dim \u001b[39m=\u001b[39m state_dim, \n\u001b[0;32m     10\u001b[0m                                        action_dim\u001b[39m=\u001b[39m action_dim, \n\u001b[0;32m     11\u001b[0m                                        API_KEY \u001b[39m=\u001b[39m API_KEY, \n\u001b[0;32m     12\u001b[0m                                        API_SECRET \u001b[39m=\u001b[39m API_SECRET, \n\u001b[0;32m     13\u001b[0m                                        API_BASE_URL \u001b[39m=\u001b[39m API_BASE_URL, \n\u001b[0;32m     14\u001b[0m                                        tech_indicator_list \u001b[39m=\u001b[39m customIndicators, \n\u001b[0;32m     15\u001b[0m                                        turbulence_thresh\u001b[39m=\u001b[39m\u001b[39m30\u001b[39m, \n\u001b[0;32m     16\u001b[0m                                        max_stock\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m)  \u001b[39m# this is the max that can be placed at one time, not the max the bot will buy if capital is available\u001b[39;00m\n\u001b[0;32m     18\u001b[0m paper_trading_erl\u001b[39m.\u001b[39mrun()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ERL_PARAMS' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| load actor from: ./bots/1.14_over10days_Mar28th.pth\n",
+      "Waiting for market to open...\n",
+      "Market opened.\n",
+      "11\n",
+      "Quantity is 0, order of | 0 DBX sell | not completed.\n",
+      "Quantity is 0, order of | 0 RIG sell | not completed.\n",
+      "Quantity is 0, order of | 0 GME sell | not completed.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_34460\\3578762974.py:185: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
+      "  s_tensor = torch.as_tensor((state,), device=self.device)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantity is 0, order of | 0 APLE buy | not completed.\n",
+      "Quantity is 0, order of | 0 XRX buy | not completed.\n",
+      "Quantity is 0, order of | 0 AGNC buy | not completed.\n",
+      "Quantity is 0, order of | 0 BB buy | not completed.\n"
      ]
     }
    ],
@@ -1217,10 +1241,10 @@
     "                                       action_dim= action_dim, \n",
     "                                       API_KEY = API_KEY, \n",
     "                                       API_SECRET = API_SECRET, \n",
-    "                                       API_BASE_URL = API_BASE_URL, \n",
+    "                                       API_BASE_URL = API_BASE_URL,       \n",
     "                                       tech_indicator_list = customIndicators, \n",
     "                                       turbulence_thresh=30, \n",
-    "                                       max_stock=20)  # this is the max that can be placed at one time, not the max the bot will buy if capital is available\n",
+    "                                       max_stock=50)  # this is the max that can be placed at one time, not the max the bot will buy if capital is available\n",
     "                                                       \n",
     "paper_trading_erl.run()"
    ]
