MOre work on new ETF_metal bot

--- a/_Goldbots/RunGoldBot_TEMPLATE.ipynb
+++ b/_Goldbots/RunGoldBot_TEMPLATE.ipynb
@@ -927,11 +927,13 @@
     "        orders = self.alpaca.list_orders(status=\"open\")\n",
     "        for order in orders:\n",
     "          self.alpaca.cancel_order(order.id)\n",
-    "    \n",
+    "        # latency = self.test_latency()\n",
+    "        # print(\"latency: \" + latency)\n",
     "        # Wait for market to open.\n",
     "        print(\"Waiting for market to open...\")\n",
     "        self.awaitMarketOpen()\n",
     "        print(\"Market opened.\")\n",
+    "       \n",
     "\n",
     "        #Uncommenting this will force all positions closed at end of day\n",
     "        # while True:\n",
@@ -1213,7 +1215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_34460\\3578762974.py:185: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
+      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_33616\\743412489.py:187: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
       "  s_tensor = torch.as_tensor((state,), device=self.device)\n"
      ]
     },
@@ -1223,8 +1225,7 @@
      "text": [
       "Quantity is 0, order of | 0 APLE buy | not completed.\n",
       "Quantity is 0, order of | 0 XRX buy | not completed.\n",
-      "Quantity is 0, order of | 0 AGNC buy | not completed.\n",
-      "Quantity is 0, order of | 0 BB buy | not completed.\n"
+      "Quantity is 0, order of | 0 AGNC buy | not completed.\n"
      ]
     }
    ],
